--- a/bitrise.yml
+++ b/bitrise.yml
@@ -7,7 +7,7 @@ app:
   - A_SECRET_PARAM: $A_SECRET_PARAM
   # If you want to share this step into a StepLib
   - BITRISE_STEP_ID: kotlin-script
-  - BITRISE_STEP_VERSION: "0.0.1"
+  - BITRISE_STEP_VERSION: "1.0.2"
   - BITRISE_STEP_GIT_CLONE_URL: https://github.com/jakob-grabner/bitrise-step-kotlin-script.git
   - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
 
@@ -20,13 +20,36 @@ workflows:
         - path: ./_tmp
         - is_create_path: true
     - script:
+        title: "Create working dir"
         inputs:
-        - content: mkdir -p ./test_script_run_dir
+        - content: mkdir -p ./test_script_working_dir
     - path::./:
+            title: "Test print"
             inputs:
             - kotlin_content: |-
                 println("Hello World")
     - path::./:
+            title: "Test default file location"
+            inputs:
+            - kotlin_content: |-
+                java.io.File("default.txt").writeText("OK")
+    - script:
+        title: "Verify default file location"
+        inputs:
+        - content: |-
+            set -e
+            # Get the content of the file.
+            file_content=$(cat $BITRISE_SOURCE_DIR/default.txt)
+
+            # Check the file content
+            if [[ "$file_content" == 'OK' ]]; then
+              exit 0
+            fi
+
+            # If we reach this point, the file content was not as expected
+            exit 1
+    - path::./:
+            title: "Test external lib usage and working dir"
             inputs:
             - kotlin_content: |-
                 @file:Repository("https://repo.maven.apache.org/maven2/") // define a repository if you need dependencies
@@ -39,8 +62,9 @@ workflows:
 
                 val jsonString = Gson().toJson(Greeting("Hello World!"))
                 File("output.txt").writeText(jsonString)
-            - script_run_dir: ./test_script_run_dir
+            - working_dir: ./test_script_working_dir
     - script:
+        title: "Verify external lib usage and working dir"
         inputs:
         - content: |-
             set -e
