--- a/bitrise.yml
+++ b/bitrise.yml
@@ -9,7 +9,7 @@ app:
   - BITRISE_STEP_ID: kotlin-script
   - BITRISE_STEP_VERSION: "1.0.2"
   - BITRISE_STEP_GIT_CLONE_URL: https://github.com/jakob-grabner/bitrise-step-kotlin-script.git
-  - MY_STEPLIB_REPO_FORK_GIT_URL: https://github.com/jakob-grabner/bitrise-steplib
+  - MY_STEPLIB_REPO_FORK_GIT_URL: git@github.com:jakob-grabner/bitrise-steplib.git
 
 workflows:
   test:
